Fixing errors revealed by integrating the plugin on a server

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,10 +2,10 @@ main: fr.martinfimbel.Minecraft_NewSwitch.SWPlugin
 name: minecraft-newswitch
 version: 1.0-SNAPSHOT
 api-version: 1.13
+depend: [minecraft-border]
 
 description:
 commands:
-
   sw:
-    description:
+    description: Switch game configuration command
     permission: SWPlugin.permission
